@@ -1,3 +1,8 @@
+2009-06-19 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/Additions/Unicode.m: Fix incorrect attempt to free memory
+	we shouldn't.  Should fix bug #26843
+
 2009-06-16 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/win32/NSMessagePort.m: Don't use NSLog() to report error
